--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -18,7 +18,6 @@ stage {
   icon-shadow: 0 1px black;
   border: 1px solid #101316;
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px; }
   .button:focus, .app-folder-dialog .edit-folder-button:focus {
     color: #9bbfbf;
@@ -977,22 +976,6 @@ StScrollBar {
     color: #a5a5a5; }
   .message-list .message-content, .message-list .message-body {
     color: #a3a3a3; }
-
-.message-list-clear-button.button {
-  color: #ADADAD;
-  background-color: #0c0e10;
-  box-shadow: none;
-  border: 1px solid #101316;
-  text-shadow: 0 1px black;
-  icon-shadow: 0 1px black;
-  border: 1px solid #101316;
-  margin: 1.5em 1.5em 0; }
-  .message-list-clear-button.button:hover, .message-list-clear-button.button:focus {
-    color: #9bbfbf;
-    background-color: #101316;
-    border: 1px solid #101316;
-    text-shadow: 0 1px black;
-    icon-shadow: 0 1px black; }
 
 .message-list-sections {
   spacing: 1em; }
